--- a/package.json
+++ b/package.json
@@ -3,8 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/core": "^10.0.16",
+    "@emotion/styled": "^10.0.15",
+    "emotion": "^10.0.14",
+    "lodash.uniqueid": "^4.0.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-emotion": "^10.0.0",
     "react-scripts": "3.1.1"
   },
   "scripts": {
