--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@babel/plugin-proposal-pipeline-operator": "^7.5.0",
     "@babel/preset-react": "^7.0.0",
     "customize-cra": "^0.5.0",
+    "eslint-plugin-react-hooks": "^2.0.1",
     "react-app-rewired": "^2.1.3"
   }
 }
