--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@emotion/core": "^10.0.16",
     "@emotion/styled": "^10.0.15",
+    "@material-ui/core": "^4.4.0",
+    "@reach/dialog": "^0.2.9",
     "emotion": "^10.0.14",
     "lodash.uniqueid": "^4.0.1",
     "react": "^16.9.0",
